# attack-kg

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker.yml
docs/: papers.md
docs/architecture/: architecture.mmd  architecture.tex  component-diagram.mmd  data-flow.mmd  query-flow.mmd  schema.mmd
notebooks/: exploration.ipynb
src/: __init__.py  cli.py  debug.py  logging.py  main.py
src/benchmark/: __init__.py  reporter.py  runner.py  scorer.py  testcases.py
src/cli/: __init__.py  browser.py  output.py  presenter.py
src/ingest/: __init__.py  capec.py  d3fend.py  download.py  embeddings.py  gtfobins.py  lolbas.py  stix_to_rdf.py
src/query/: __init__.py  engine.py  hybrid.py  keyword.py  router.py  semantic.py  sparql.py
src/reasoning/: __init__.py  analyzer.py  encoder.py  llm.py  toon_encoder.py
src/reasoning/stages/: __init__.py  remediator.py  selector.py
src/store/: __init__.py  graph.py  vectors.py
tests/: __init__.py  test_analyzer.py  test_capec.py  test_d3fend.py  test_embeddings.py  test_encoder.py  test_engine.py  test_graph.py  test_gtfobins.py  test_ingest.py  test_keyword.py  test_llm.py  test_lolbas.py  test_router.py  test_stix_to_rdf.py
tests/fixtures/: sample_stix.json
