[project]
name = "attack-kg"
version = "0.1.0"
description = "Neuro-symbolic knowledge graph for MITRE ATT&CK threat intelligence"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    # RDF / Knowledge Graph
    "rdflib>=7.0.0",
    "oxrdflib>=0.3.6",

    # Vector Store
    "chromadb>=0.4.22",
    "sentence-transformers>=2.2.2",
    "einops>=0.7.0",  # Required by nomic-embed-text-v1.5

    # LLM Integration
    "ollama>=0.1.6",
    "openai>=1.12.0",

    # Data Processing
    "httpx>=0.26.0",
    "pydantic>=2.5.0",

    # CLI
    "typer>=0.9.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ipython>=8.20.0",
    "jupyter>=1.0.0",
]

[project.scripts]
attack-kg = "src.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
